--- a/modguis/MVerb.modgui/modgui/icon-mverb.html
+++ b/modguis/MVerb.modgui/modgui/icon-mverb.html
@@ -76,6 +76,11 @@
             <div class="mod-pedal-input-image"></div>
         </div>
         {{/effect.ports.midi.input}}
+        {{#effect.ports.cv.input}}
+        <div class="mod-input mod-input-disconnected" title="{{name}}" mod-role="input-cv-port" mod-port-symbol="{{symbol}}">
+            <div class="mod-pedal-input-image"></div>
+        </div>
+        {{/effect.ports.cv.input}}
     </div>
     <div class="mod-pedal-output">
         {{#effect.ports.audio.output}}
@@ -88,5 +93,10 @@
             <div class="mod-pedal-output-image"></div>
         </div>
         {{/effect.ports.midi.output}}
+        {{#effect.ports.cv.output}}
+        <div class="mod-output mod-output-disconnected" title="{{name}}" mod-role="output-cv-port" mod-port-symbol="{{symbol}}">
+            <div class="mod-pedal-output-image"></div>
+        </div>
+        {{/effect.ports.cv.output}}
     </div>
 </div>
